
 XGngeo - Changelog
~~~~~~~~~~~~~~~~~~~~

* Changes in version 16 (2006-XX-XX):

- Bugfix: no more problem in the Rom list with some PyGTK ins-
tallations. 
- Added checking for the PyGTK version (must be 2.6 or more).
- System-wide installation (using distutil) & per-user XGngeo
configuration.
- New German translation by Peter Kainrad.

* Changes in version 15 (2005-07-14):

- Big configuration panels reorganization with now 3 different
windows: ``Important paths" (which contains the required
parameters that have to be valid for a correct emultation),
``Global emulation" (which contains Neo Geo default emulation
options for all Roms) and ``Other things" (which mostly
contains XGngeo-specific parameters).
- Improvements on the Rom list window which now features, for
the first time in a Gngeo frontend ever, the possibility to set
Rom-specific emulation options! ^___^";
- Added a new ``Joystick" section, merged with the ``Audio"
one, where you can, among others, modify the joystick devices
used by the two players.
- Improved key configurator which, among others, now displays
the key names in place of their SDL values.
- Use of the new GTK+ file chooser for selecting files and
directories.
- Added support for the bigger windowed screen size and the
Raster effect options.
- Now preventing effect in the list from being selected when
the ``YUV" blitter (which does not support effect) is choosed.
- Display of a sort of progress bar indicating that the Rom
is being started, and of warning messages that may return
Gngeo if it encounters a problem starting the game.
- If already on the ``History" menu, loaded Rom name isn't
repeated any more but moved to the first place. By the way,
this menu can now be torn off.
- Some options involving path now come along with little icons
which indicate whether the path is valid or not (yeah that's a
killer feature :p).
- Better handling of parameters in configurations files.
- Loads of GUI enhancements, and replacement of the GTK+